--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,9 +31,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: multi-gh
-          environment_name: Multigh-env
-          existing_bucket_name: elasticbeanstalk-eu-west-1-923445559289
-          region: eu-west-1
+          application_name: multi-container-docker
+          environment_name: multi-container-docker-env
+          existing_bucket_name: elasticbeanstalk-ap-south-1-085031185171
+          region: ap-south-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
